--- a/sfml_graphics/sfml_graphics.vcxproj
+++ b/sfml_graphics/sfml_graphics.vcxproj
@@ -118,6 +118,13 @@
       <AdditionalLibraryDirectories>C:\Users\mail\Documents\_libraries\SFML-2.5.1\lib-x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-main.lib;sfml-system.lib;sfml-window.lib;sfml-graphics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName)</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>
+      </Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -154,6 +161,13 @@
       <AdditionalLibraryDirectories>C:\Users\mail\Documents\_libraries\SFML-2.5.1\lib-x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-main.lib;sfml-system.lib;sfml-window.lib;sfml-graphics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName)</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>
+      </Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
@@ -166,6 +180,30 @@
     <ClInclude Include="Extension\SFML_Vector.hpp" />
     <ClInclude Include="Global.hpp" />
     <ClInclude Include="ToolBox.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin-x64\openal32.dll" />
+    <None Include="bin-x64\sfml-audio-2.dll" />
+    <None Include="bin-x64\sfml-audio-d-2.dll" />
+    <None Include="bin-x64\sfml-graphics-2.dll" />
+    <None Include="bin-x64\sfml-graphics-d-2.dll" />
+    <None Include="bin-x64\sfml-network-2.dll" />
+    <None Include="bin-x64\sfml-network-d-2.dll" />
+    <None Include="bin-x64\sfml-system-2.dll" />
+    <None Include="bin-x64\sfml-system-d-2.dll" />
+    <None Include="bin-x64\sfml-window-2.dll" />
+    <None Include="bin-x64\sfml-window-d-2.dll" />
+    <None Include="bin-x86\openal32.dll" />
+    <None Include="bin-x86\sfml-audio-2.dll" />
+    <None Include="bin-x86\sfml-audio-d-2.dll" />
+    <None Include="bin-x86\sfml-graphics-2.dll" />
+    <None Include="bin-x86\sfml-graphics-d-2.dll" />
+    <None Include="bin-x86\sfml-network-2.dll" />
+    <None Include="bin-x86\sfml-network-d-2.dll" />
+    <None Include="bin-x86\sfml-system-2.dll" />
+    <None Include="bin-x86\sfml-system-d-2.dll" />
+    <None Include="bin-x86\sfml-window-2.dll" />
+    <None Include="bin-x86\sfml-window-d-2.dll" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
