--- a/SumulationBilliardBalls/SumulationBilliardBalls.vcxproj
+++ b/SumulationBilliardBalls/SumulationBilliardBalls.vcxproj
@@ -99,7 +99,7 @@
       <AdditionalDependencies>sfml-main-d.lib;sfml-system-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName)</Command>
+      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName) -p $(ProjectDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -122,7 +122,7 @@
       <AdditionalDependencies>sfml-main.lib;sfml-system.lib;sfml-window.lib;sfml-graphics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName)</Command>
+      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName) -p $(ProjectDir)</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>
@@ -145,7 +145,7 @@
       <AdditionalDependencies>sfml-main-d.lib;sfml-system-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName)</Command>
+      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName) -p $(ProjectDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -168,7 +168,7 @@
       <AdditionalDependencies>sfml-main.lib;sfml-system.lib;sfml-window.lib;sfml-graphics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName)</Command>
+      <Command>python $(ProjectDir)PostBuild\process.py -a $(PlatformShortName) -o $(TargetDir) -b $(ProjectDir)bin-$(PlatformShortName) -p $(ProjectDir)</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>
